# Sparsix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: basics.cpp  io.cpp  main.cpp  smoke.cpp  solvers.cpp
include/: Sparsix.h
include/Sparsix/: Conversions.h  MatrixCOO.h  MatrixCSC.h  MatrixCSR.h
include/Sparsix/Algorithms/: Arithmetic.h  Multiplication.h  Transpose.h  Utilities.h  VectorAlgorithms.h
include/Sparsix/Algorithms/Solvers/: BiCGSTAB.h  CG.h  SolverResult.h
include/Sparsix/Concepts/: MatrixScalar.h  SparseMatrix.h
include/Sparsix/Core/: MajorOrder.h  MatrixEntry.h  Triplet.h
include/Sparsix/Detail/: BinaryMerge.h  Conversions.h  PrepareTriplets.h  Randomizer.h  TripletsFromDense.h
include/Sparsix/IO/: CSV.h  Detail.h  MatrixMarket.h  Stream.h
include/Sparsix/Utils/: Randomizer.h
tests/: algorithms_tests.cpp  solvers_and_utilities_tests.cpp  sparsix_tests.cpp
